<resources>
    <string name="app_name" translatable="false">AndroidAutoX</string>
    <string name="main_string">Welcome to AndroidAutoX\n
This app will let you apply some tweaks to Android Auto\n
Simply select what tweak you want to apply :)\n
If you are unsure of what a tweak does, long press on it and a tutorial will show up.</string>
    <string name="select_apps">Select apps</string>
    <string name="enable_assistant_shortcuts">Assistant shortcuts</string>
    <string name="patch_custom_apps">custom apps</string>
    <string name="disable_speed_limitations">tap limitations</string>
    <string name="unlimited_scrolling_when_driving">speed restrictions</string>
    <string name="message_auto_read">Message auto-read</string>
    <string name="splash">This app can alter Android Auto behaviour and bypass some safety features that Google has implemented in Android Auto.\n
By using this software, you agree that YOU, and ONLY YOU, are solely responsible for any possible consequence that may result in altering safety features such as injury to yourself and/or others, property damage, loss of life.\n
Under no circumstances is the author of this app responsible for its use</string>
    <string name="proceed">I understand</string>
    <string name="disable_startup_warning">Don\'t show this warning again</string>
    <string name="startup_warning_disabled">Startup warning disabled</string>
    <string name="navigation_at_start">Navigation at start</string>
    <string name="statb_opaque_string">Force Opaque Statusbar</string>
    <string name="battery_outline_string">battery saver outline</string>
    <string name="legend">Status Legend:\n
GREEN: Patch applied\n
YELLOW: Reboot is needed to apply patch\n
RED: Patch is not applied\n</string>
    <string name="set_notification_duration_to">Notification duration to</string>
    <string name="base_no_ws">Widescreen</string>
    <string name="force_widescreen_text">Force Widescreen</string>
    <string name="media_notification_duration_to">Media notification duration to</string>
    <string name="bluetooth_auto_connect">Bluetooth auto connect</string>
    <string name="tutorial_nospeed">This tweak will make Android Auto think that the car is at 0 speed. As a result, Android Auto will always show the preview of messages. This tweak does not apply to keyboard or first configuration of Android Auto.</string>
    <string name="tutorial_sixtap">This tweak will override the 6 tap limit of Android Auto and will make unlimited browsing of content always possible.</string>
    <string name="tutorial_shortcuts">This tweak will unlock the new Assistant Shortcuts feature. Once activated you can go to Android Auto settings, and in the customize launcher section you can start adding shortcuts to Google Assistant commands.</string>
    <string name="tutorial_startup">This tweak will override the default behaviour of Android Auto opening a navigation app at start and will make Android Auto start on launcher.\n
In some cases this tweak will disable auto start of music. A known workaround is to disable and re-enable the option within Android Auto settings.\n
It\'s not possible to set a specific app to start first.</string>
    <string name="tutorial_widescreen">This tweak will force Android Auto in widescreen mode.</string>
    <string name="tutorial_no_widescreen">This tweak will force Android Auto in no widescreen mode.</string>
    <string name="tutorial_autoplay_message">This tweak enables the possibility to set whether Android Auto must read the incoming messages or not. Android Auto 8.3 or superior is required.</string>
    <string name="tutorial_statusbar_opaque">This tweak will make the status bar always black.</string>
    <string name="tutorial_battery_outline">This tweak will prevent the battery icon with the red outline when battery saver is on.</string>
    <string name="tutorial_hun">This tweak lets you set a custom duration for heads-up notifications.</string>
    <string name="tutorial_media_hun">This tweak lets you set a custom duration for media notifications in navigation bar to up to 15 minutes.</string>
    <string name="tutorial_bluetooth">This tweak should prevent Bluetooth from turning on when Android Auto is connected. This tweak won\'t work if Bluetooth is already on.</string>
    <string name="tutorial_patchapps">This tweak will enable third-party apps made specifically with Android Auto custom SDK to work on Android Auto.\n
If you are familiar with AA Phenotype Patcher, this tweak is pretty much identical to it.\n
It\'s not possible to add just any app to Android Auto, but it\'s possible to patch sideloaded apps MADE FOR ANDROID AUTO to work in cars.</string>
    <string name="multi_display_string">Multi Display</string>
    <string name="tutorial_multidisplay">This is a hidden feature inside Android Auto that will turn the second space in widescreen mode into a real second display that is completely taken by a second activity. Google Maps will display a full map with navigation status, music and phones will take the full space.\n
Additionally, this mode activates another feature that will turn the phone\'s screen into a second display for navigation in Android Auto.\n
Settings for tweaking this feature will be available in Android Auto homescreen.\n
Apparently, only Google Maps currently supports this mode.\n
This feature is probably under development and could potentially not work as intended.\n
Android Auto 5.8 or superior is required.</string>
    <string name="battery_warning">Battery saver warning</string>
    <string name="tutorial_battery_saver_warning">This tweak will prevent Android Auto from showing pop-up warnings when battery saver mode is on.</string>
    <string name="disable_tweak_string">Disable\u0020</string>
    <string name="enable_tweak_string">Enable\u0020</string>
    <string name="re_enable_tweak_string">Re-enable\u0020</string>
    <string name="copy_log">Copy log</string>
    <string name="auto_reapply_on">Tweaks will be re-applied automatically if Android Auto reverts them</string>
    <string name="auto_reapply_off">Automatic re-apply disabled</string>
    <string name="nondestructive_patch_on">Non-destructive patching ON: apps will only be re-stamped (not reinstalled). Experimental — may not pass Android Auto validation.</string>
    <string name="nondestructive_patch_off">Non-destructive patching OFF: apps will be uninstalled and reinstalled (default).</string>
    <string name="auto_backup_dbs_on">Database backups ON: a copy is saved before each edit (default).</string>
    <string name="auto_backup_dbs_off">Database backups OFF: no copy is saved before edits.</string>
    <string name="patch_apps_lost_intro">Some apps were left uninstalled while patching for Android Auto. Their only remaining copy is the temporary APK listed below — reinstall it (for example: pm install &lt;path&gt;) to recover the app:</string>
    <string name="tab_tweaks">Tweaks</string>
    <string name="tab_logs">Logs</string>
    <string name="welcome_title">Welcome to AndroidAutoX</string>
    <string name="dismiss">Dismiss</string>
    <string name="legend_applied">Applied</string>
    <string name="legend_reboot">Reboot needed</string>
    <string name="legend_not_applied">Not applied</string>
    <string name="copy_logs_button">Copy logs</string>
    <string name="clear_logs_button">Clear logs</string>
    <string name="force_disable_tweak">Force Disable\u0020</string>
    <string name="reset_tweak">Reset\u0020</string>
    <string name="force_widescreen_warning">Force widescreen has been automatically disabled</string>
    <string name="force_disable_widescreen_warning">Force disable widescreen has been automatically disabled</string>
    <string name="set_value">Set\u0020</string>
    <string name="reboot_to_apply">REBOOT TO APPLY</string>
    <string name="warning_title">WARNING</string>
    <string name="patch_app">Patch\u0020</string>
    <string name="default_string">\u0020Default</string>
    <string name="app_list_label">Apps List</string>
    <string name="translators_button">Translated by</string>
    <string name="about_part_one"><![CDATA[AndroidAutoX<br><br>Made with &#10084; by <a href=\"https://github.com/Xiddoc\">Xiddoc</a><br><br>Source code is available on <a href=\"https://github.com/Xiddoc/AndroidAutoX\">GitHub</a>]]></string>
    <string name="custom_wallpapers">Wallpapers</string>
    <string name="tutorial_wallpapers">This tweak will activate the new built in wallpaper changer in Android Auto. Android Auto 5.8 or superior is required.\nWARNING: If you are a user of Wallpapers For Android Auto, you will need to update it to at least version 3.0, otherwise this tweak will break Wallpapers For Android Auto functionality.</string>
    <string name="tutorial_dark_mode">Starting from December 2020, Google reverted a behaviour that happened since Android 10. Previously, the light/dark mode on Android Auto followed the light/dark mode on the phone and vice versa. This meant that switching the phone to dark mode had an effect on the car, or if the phone was in dark mode and the car had lights off it used to switch on the light theme on the phone.\n However, since this feature of \"independent\" dark mode was introduced, users with aftermarket headunits have no way to switch to dark mode anymore without actually wiring the stereo to the car\'s lights.\n This tweak makes sure that night mode is again dependent on the phone and switching light/dark mode on the phone will have its effects on cars too.</string>
    <string name="dark_mode_tweak">independent dark mode</string>
    <string name="telemetry_string">telemetry</string>
    <string name="tutorial_telemetry">It\'s no mystery that Google logs a lot of data about us. This tweak will make it so that Google Play Services will stop a lot of tracking and logging activity.\n
WARNING: This tweak has not been extensively tested and could potentially break Android Auto. If you find out that this tweak breaks Android Auto, please open an issue on GitHub.</string>
    <string name="reboot_prompt">Reboot phone now?</string>
    <string name="rebooting_action">Rebooting…</string>
    <string name="added_app_action">"Added: "</string>
    <string name="removed_app_action">Removed\u0020</string>
    <string name="badge_native_auto">NATIVE</string>
    <string name="badge_mirror_shim">MIRROR</string>
    <string name="badge_needs_bridge">NEEDS BRIDGE</string>
    <string name="badge_needs_bridge_hint">Won\'t render natively on Android Auto yet — whitelisted only.</string>
    <string name="root_access_warning">Root access denied. Please allow root access.</string>
    <string name="requesting_root">Requesting root access…</string>
    <string name="request_root_again">Request again</string>
    <string name="not_now">Not now</string>
    <string name="revert_everything_dialog">This will revert ALL applied Android Auto flag and Gearhead modifications back to their default values. Your tweak selections will be cleared. Please restart the app manually after this completes.</string>
    <string name="calendar_tweak">Set %1$s visible days in calendar</string>
    <string name="log_first_line">LOG:\n</string>
    <string name="settings_header_about">About</string>
    <string name="settings_header_general">General</string>
    <string name="settings_header_developer">Developer</string>
    <string name="settings_reset_label">Reset all tweaks</string>
    <string name="settings_reapply_label">Auto-reapply tweaks</string>
    <string name="settings_aa_label">Android Auto settings</string>
    <string name="settings_ndpatch_label">Non-destructive patching</string>
    <string name="settings_backup_label">Back up databases</string>
    <string name="settings_devtest_label">Phixit apply test</string>
    <string name="settings_devdump_label">Dump all flags</string>
    <string name="settings_devmode_label">Developer mode</string>
</resources>