<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/logs_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:background="@drawable/code_panel_bg"
        android:padding="12dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/copy_logs_button">

        <TextView
            android:id="@+id/logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_first_line"
            android:textColor="@color/code_text"
            android:textSize="12sp"
            android:typeface="monospace"
            android:scrollHorizontally="true" />
    </ScrollView>

    <Button
        android:id="@+id/clear_logs_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/clear_logs_button"
        app:layout_constraintTop_toTopOf="@id/copy_logs_button"
        app:layout_constraintBottom_toBottomOf="@id/copy_logs_button"
        app:layout_constraintEnd_toStartOf="@id/copy_logs_button" />

    <Button
        android:id="@+id/copy_logs_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/copy_logs_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
